--- a/index.html
+++ b/index.html
@@ -54,15 +54,8 @@
     </dialog>
 
     
-
-    <!-- <button class="avatar-img-btn">
-        <ion-icon class="close-avatar-icon" name="close-outline"></ion-icon>
-        <img src="avatar-5 (1).png" alt="" class="avatar-img">
-    </button>
-    <button class="avatar-img-btn">
-        <ion-icon class="close-avatar-icon" name="close-outline"></ion-icon>
-        <img src="avatar-5.png" alt="" class="avatar-img">
-    </button> -->
+     <div id="container">
+     </div>
     <button id="add_new_avatar" type="button" class="avatar-button avatar-button__add-new">+</button>
 
     <output></output>
